--- a/index.html
+++ b/index.html
@@ -1,51 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gamer Zone</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="./images/Frame.png">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="./images/Frame.png" />
+  </head>
+  <body>
     <!-- navbar----------------------------------------------- -->
     <nav>
-        <div class="logo-div">
-            <img src="./images/Frame.png" alt="gamer logo">
-            <p><span>G</span>amer</p>
+      <div class="logo-div">
+        <img src="./images/Frame.png" alt="gamer logo" />
+        <p><span>G</span>amer</p>
+      </div>
+      <div class="nav-right">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Depelopers</a></li>
+        <div class="follow-us">
+          <li>Follow Us On</li>
+          <li>
+            <a href="#"><img src="./images/Vector.png" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./images/tik-tok.png" alt="" /></a>
+          </li>
         </div>
-        <div class="nav-right">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Depelopers</a></li>
-            <div class="follow-us">
-                <li>Follow Us On</li>
-                <li><a href="#"><img src="./images/Vector.png" alt=""></a></li>
-                <li><a href="#"><img src="./images/tik-tok.png" alt=""></a></li> 
-            </div>
-        </div>
+      </div>
     </nav>
     <body>
-        <!--banner1 -->
-        <section class="banner1">
-            <div class="bn1-about">
-                <h3>PLAY LIKE THE</h3>
-                <h1>G.O.A.T</h1>
-                
-            </div>
-        </section>
-        <!--banner2 -->
-        <section class="banner2"></section>
-        <!-- videos -->
-        <section class="videos"></section>
-        <!-- play online -->
-        <section class="play-online"></section>
-       <!-- career -->
-       <section class="career"></section>
-       <!-- game catagory -->
-       <section class="catagory"></section>
-        
+      <section class="banner1">
+        <div class="bn1-about-container">
+          <img src="./images/Group14.png" alt="" />
+          <div class="bn1-about">
+            <h3>PLAY LIKE THE</h3>
+            <h1>G.O.A.T</h1>
+            <pre><img src="./images/play-icon.png" alt="icon">  1-Click Instant play</pre>
+            <pre><img src="./images/dwn-icon.png" alt="icon">  No Download</pre>
+            <pre><img src="./images/people-icon.png" alt="icon">  1000s of supported online games</pre>
+            <button class="cmn-btn">SIGN IN</button>
+            <button class="btn1">GO ROGUE</button>
+          </div>
+        </div>
+        <div class="bn1-img">
+          <img src="./images/Group 18.png" alt="" />
+        </div>
+      </section>
+      <section class="banner2">
+        <div class="bnr2-img">
+          <img src="./images/pngwing 4.png" alt="" />
+        </div>
+        <div class="bnr2-content">
+          <h1>We are gamer</h1>
+          <pre>
+                An international digital games and entertainment 
+                company. We develop, publish and distribute multiplayer 
+                mobile games. We reach over 400 million players each 
+                month and our audience keeps growing.
+            </pre>
+            <button class="cmn-btn">KNOW MORE</button>
+            <p>Our purpose...</p>
+            <h3>“unleash the gamer in everyone”</h3>
+        </div>
+      </section>
+      <!-- videos -->
+      <section class="videos"></section>
+      <!-- play online -->
+      <section class="play-online"></section>
+      <!-- career -->
+      <section class="career"></section>
+      <!-- game catagory -->
+      <section class="catagory"></section>
     </body>
     <footer></footer>
-
-</body>
+  </body>
 </html>
