--- a/index.html
+++ b/index.html
@@ -72,30 +72,30 @@
         <section>
             <div class="online-games">
                 <h3 class="online-games-title">Online Games <span class="color1">Funny Videos</span></h3>
-                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+                <p class="online-collection">A Collection of Hilarious Videos to Brighten Your Day</p>
                 <div class="games-card-container">
-                    <li>
+                    <li class="games-card-content">
                         <div class="games-card">
                             <img src="./images/Rectangle 4.png" alt="">
                             <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i></a></div>
                         </div>
                         <p>No Download. No Installs. Play games Instantly on Gamer</p>
                     </li>
-                    <li>
+                    <li class="games-card-content">
                         <div class="games-card">
                             <img src="./images/Rectangle 5.png" alt="">
                             <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i></a></div>
                         </div>
                         <p>Did you score? #unblocked games #school</p>
                     </li>
-                    <li>
+                    <li class="games-card-content">
                         <div class="games-card">
                             <img src="./images/Rectangle 6.png" alt="">
                             <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i></a></div>
                         </div>
                         <p>Busted gaming on school laptop but you are still lit</p>
                     </li>
-                    <li>
+                    <li class="games-card-content">
                         <div class="games-card">
                             <img src="./images/Rectangle 4.png" alt="">
                             <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i></a></div>
