--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="nav-bar">
       <div class="logo-div">
         <img src="./images/Frame.png" alt="" />
-        <h2><span>G</span>amer</h2>
+        <h2><span class="color2">G</span>amer</h2>
       </div>
       <div class="nav-right">
         <li><a href="#">About Us</a></li>
@@ -107,6 +107,38 @@
                     
                 </div>
             </div>
+        </section>
+        <!-- z-index1 -->
+        <section class="z-index1">
+            <div class="index-flex1">
+                <div class="index1-content">
+                    <h3 class="color2">Play Instantly</h3>
+                    <h3>No Download</h3>
+                    <h3>No Install</h3>
+                    <p class="play-guide">Play games online for free without 
+                        <br>downloading. Just click the Play button 
+                        <br>and play instantly in your browser.
+                    </p>
+                </div>
+                <div class="index-side-img"><img src="./images/Rectangle 55.png" alt=""></div>
+            </div>
+            <div class="index-img"><img src="./images/Rectangle 66.png" alt=""></div>
+        </section>
+        <!-- z-index2 -->
+        <section class="z-index2">
+            <div class="index-flex2 index-flex1">
+                <div class="index1-content">
+                    <h3 class="color2">Play Instantly</h3>
+                    <h3>No Download</h3>
+                    <h3>No Install</h3>
+                    <p class="play-guide">Play games online for free without 
+                        <br>downloading. Just click the Play button 
+                        <br>and play instantly in your browser.
+                    </p>
+                </div>
+                <div class="index-side-img"><img src="./images/Rectangle 67.png" alt=""></div>
+            </div>
+            <div class="index-img2 index-img"><img src="./images/Rectangle 78.png" alt=""></div>
         </section>
     </main>
 
