--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
                         <br>and play instantly in your browser.
                     </p>
                 </div>
-                <div class="index-side-img"><img src="./images/Rectangle 55.png" alt=""></div>
+                <div class="index-side-img"><img src="./images/Rectangle 55.png" alt="">
+                    <div class="index-img"><img src="./images/Rectangle 66.png" alt=""></div>
+                </div>
             </div>
-            <div class="index-img"><img src="./images/Rectangle 66.png" alt=""></div>
         </section>
         <!-- z-index2 -->
         <section class="z-index2">
@@ -136,9 +137,43 @@
                         <br>and play instantly in your browser.
                     </p>
                 </div>
-                <div class="index-side-img"><img src="./images/Rectangle 67.png" alt=""></div>
+                <div class="index-side-img"><img src="./images/Rectangle 67.png" alt="">
+                    <div class="index-img2 index-img"><img src="./images/Rectangle 78.png" alt=""></div>
+                </div>
             </div>
-            <div class="index-img2 index-img"><img src="./images/Rectangle 78.png" alt=""></div>
+        </section>
+        <!-- careers -->
+        <section>
+            <div class="careers-container">
+                <div class="careers-about">
+                    <h3 class="careers">Careers</h3>
+                    <p>Gamer is driven to create the best and most fun games for our millions of 
+                        <br>players all around the world, and we,re always on the lookout for more top 
+                        <br>talent to join our growing team. If you,d like to help us make great games 
+                        <br>and be a part of Gamers bright future, we,d love to hear from you.
+                    </p>
+                    <div class="opportunity">
+                        <div class="skills">
+                            <li>Multimedia Artist +</li>
+                            <li>Data Engineer +</li>
+                            <li>Adroid Engineer +</li>
+                            <li>Server Developer +</li>
+                            <li>Group Financial Accountant +</li>
+                            <li>Senior User Acuisition Specialist +</li>
+                        </div>
+                        <div class="region">
+                            <li>Lisbon, Portugal</li>
+                            <li>Lisbon, Portugal</li>
+                            <li>Zoetermeer, Netherlands</li>
+                            <li>Lisbon, Portugal</li>
+                            <li>London, United Kingdom</li>
+                            <li>Lisbon, Portugal</li>
+                        </div>
+                    </div>
+                    <button class="cmn-btn careers-btn">SEE ALL POSITIONS</button>
+                </div>
+                <div class="future-img"><img src="./images/Group 65.png" alt=""></div>
+            </div>
         </section>
     </main>
 
