--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <!-- z-index1 -->
         <section class="z-index1">
             <div class="index-flex1">
-                <div class="index1-content">
+                <div class="index-content">
                     <h3 class="color2">Play Instantly</h3>
                     <h3>No Download</h3>
                     <h3>No Install</h3>
@@ -120,15 +120,15 @@
                         <br>and play instantly in your browser.
                     </p>
                 </div>
-                <div class="index-side-img"><img src="./images/Rectangle 55.png" alt="">
-                    <div class="index-img"><img src="./images/Rectangle 66.png" alt=""></div>
+                <div class="index-side-img1"><img src="./images/Rectangle 55.png" alt="">
+                    <div class="index-img1"><img src="./images/Rectangle 66.png" alt=""></div>
                 </div>
             </div>
         </section>
         <!-- z-index2 -->
         <section class="z-index2">
             <div class="index-flex2 index-flex1">
-                <div class="index1-content">
+                <div class="index-content">
                     <h3 class="color2">Play Instantly</h3>
                     <h3>No Download</h3>
                     <h3>No Install</h3>
@@ -137,8 +137,8 @@
                         <br>and play instantly in your browser.
                     </p>
                 </div>
-                <div class="index-side-img"><img src="./images/Rectangle 67.png" alt="">
-                    <div class="index-img2 index-img"><img src="./images/Rectangle 78.png" alt=""></div>
+                <div class="index-side-img2"><img src="./images/Rectangle 67.png" alt="">
+                    <div class="index-img2"><img src="./images/Rectangle 78.png" alt=""></div>
                 </div>
             </div>
         </section>
@@ -156,7 +156,7 @@
                         <div class="skills">
                             <li>Multimedia Artist +</li>
                             <li>Data Engineer +</li>
-                            <li>Adroid Engineer +</li>
+                            <li>Android Engineer +</li>
                             <li>Server Developer +</li>
                             <li>Group Financial Accountant +</li>
                             <li>Senior User Acuisition Specialist +</li>
