add games types

--- a/index.html
+++ b/index.html
@@ -175,6 +175,75 @@
                 <div class="future-img"><img src="./images/Group 65.png" alt=""></div>
             </div>
         </section>
+        <!--games- catagory  -->
+        <section>
+            <div class="types-container">
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+
+                            <img src="./images/Rectangle 11.png" alt=""></div>
+                            <p class="type-name">Action</p>
+                        </a>
+                </li>
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+                            <img src="./images/Rectangle 12.png" alt=""></div>
+                            <p class="type-name">Adventure</p>
+                        </a>
+                </li>
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+                            <img src="./images/Rectangle 13.png" alt=""></div>
+                            <p class="type-name">Arcade</p>
+                        </a>
+                </li>
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+                            <img src="./images/Rectangle 14.png" alt=""></div>
+                            <p class="type-name">Arena</p>
+                        </a>
+                </li>
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+                            <img src="./images/Rectangle 15.png" alt=""></div>
+                            <p class="type-name">Word</p>
+                        </a>
+                </li>
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+                            <img src="./images/Rectangle 16.png" alt=""></div>
+                            <p class="type-name">Role Playing</p>
+                        </a>
+                </li>
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+                            <img src="./images/Rectangle 17.png" alt=""></div>
+                            <p class="type-name">Music & audio</p>
+                        </a>
+                </li>
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+                            <img src="./images/Rectangle 18.png" alt=""></div>
+                            <p class="type-name">Puzzle</p>
+                        </a>
+                </li>
+                <li class="games-container">
+                    <div class="type-icon">
+                        <a href="#">
+                            <img src="./images/Rectangle 19.png" alt=""></div>
+                            <p class="type-name">Strategy</p>
+                        </a>
+                </li>
+            </div>
+        </section>
     </main>
 
 
