footer without responsive

--- a/index.html
+++ b/index.html
@@ -245,6 +245,55 @@
             </div>
         </section>
     </main>
+    <!-- footer -->
+    <footer>
+        <div class="logo-div footer-logo">
+            <img src="./images/Frame.png" alt="" />
+            <h2><span class="color2">G</span>amer</h2>
+        </div>
+        <div class="about-link">
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Games</a></li>
+            <li><a href="#">Web Games</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">May Account</a></li>
+        </div>
+        <div class="join-us">
+            <li>
+                <a href="#">
+                    <img src="./images/twitter.png" alt=""></li>
+                </a>
+            <li>
+                <a href="#">
+                    <img src="./images/facebook.png" alt=""></li>
+                </a>
+            <li>
+                <a href="#">
+                    <img src="./images/Vector.png" alt=""></li>
+                </a>
+            <li>
+                <a href="#">
+                    <img src="./images/linkedin.png" alt=""></li>
+                </a>
+            <li>
+                <a href="#">
+                    <img src="./images/instagram.png" alt=" "></li>
+                </a>
+            <li>
+                <a href="#">
+                    <img src="./images/apple.png" alt=" "></li>
+                </a>
+        </div>
+        <div class="policy">
+            <li>Terms and conditions</li>
+            <li>Privacy policy</li>
+            <li>Cookies</li>
+            <li>Privacy setting</li>
+        </div>
+        <p class="copy-right">Play Games,Gamer @ 2000-2023 Gamer Bangladesh</p>
+    </footer>
 
 
 
