--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@
                     <li class="games-card-content">
                         <div class="games-card">
                             <img src="./images/Rectangle 4.png" alt="">
-                            <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i></a></div>
+                            <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i><P>Watch Now</P></a></div>
                         </div>
                         <p>No Download. No Installs. Play games Instantly on Gamer</p>
                     </li>
                     <li class="games-card-content">
                         <div class="games-card">
                             <img src="./images/Rectangle 5.png" alt="">
-                            <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i></a></div>
+                            <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i><P>Watch Now</P></a></div>
                         </div>
                         <p>Did you score? #unblocked games #school</p>
                     </li>
                     <li class="games-card-content">
                         <div class="games-card">
                             <img src="./images/Rectangle 6.png" alt="">
-                            <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i></a></div>
+                            <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i><P>Watch Now</P></a></div>
                         </div>
                         <p>Busted gaming on school laptop but you are still lit</p>
                     </li>
                     <li class="games-card-content">
                         <div class="games-card">
                             <img src="./images/Rectangle 4.png" alt="">
-                            <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i></a></div>
+                            <div class="overlay"><a href="#" class="icon"><i class="fa-solid fa-play"></i><P>Watch Now</P></a></div>
                         </div>
                         <p>Breaking game records like OG</p>
                     </li>
