--- a/index.html
+++ b/index.html
@@ -287,10 +287,26 @@
                 </a>
         </div>
         <div class="policy">
-            <li>Terms and conditions</li>
-            <li>Privacy policy</li>
-            <li>Cookies</li>
-            <li>Privacy setting</li>
+            <li>
+                <a href="#">
+                    Terms and conditions
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    Privacy policy
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    Cookies
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    Privacy setting
+                </a>
+            </li>
         </div>
         <p class="copy-right">Play Games,Gamer @ 2000-2023 Gamer Bangladesh</p>
     </footer>
